--- a/index.html
+++ b/index.html
@@ -1,86 +1,204 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-      Sivabharath
-    </title>
-    <meta name="viewport" content="width=device-width initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="asset/images/background/Nat1.jpg">
-    <link rel="stylesheet" href="asset/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <script src="asset/js/script.js"></script>
+    <title>Sivabharath</title>
+    <meta name="viewport" content="width=device-width initial-scale=1.0" />
+    <link rel="icon" type="image/jpg" href="asset/images/logo-main.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    />
+   
+    <link rel="stylesheet" href="asset/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
   </head>
   <body>
-      <div class="main-header">
-          <div class="main-header-list">
-            <div class="main-header-list-left">
-                <!-- <ul>
+    <div class="bg">
+    <div class="main-header">
+      <div class="main-header-list">
+        <div class="main-header-list-left">
+          <!-- <ul>
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a href="project.html">Project</a></li>
                   <li><a href="contact.html">Contact</a></li>
                 </ul> -->
-                <a href=""><img src="asset/images/Siva.png"></a>
-              </div>
-          </div>
-         <div class=main-header-social-media>
-            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook fab-icon"></i></a>
-            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter fab-icon"></i></a>
-            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram fab-icon"></i></a>
-            <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin fab-icon"></i></a>
-            <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube fab-icon"></i></a>
-         </div>
-      </div>
-
-
-      <!-- <menu-sec>-->
-        <div class="menu">
-          <div class="main-header-menu">
-            <div class="main-header-menu-contaier">
-                <ul>
-                  <li class><a class="current" href="index.html">Home</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="project.html">Project</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                </ul>
-                <a href="" ><img src="asset/images/icons/menu.png" alt="No image" ></a>
-              </div>
-            </div>
-         </div>
-      <!-- menu sec end -->
-
-
-      <!-- welcome sec -->
-         
-        <div class="wel-sec">
-          <h1>Sivasp<span><br>Developer</span></h1>
-            <span><a hre="#" >Welcome</a></span>
-          <div>
+          <a href=""><img src="asset/images/logo-main.png"/></a>
         </div>
       </div>
+      <div class="main-header-social-media">
+        <a href="https://www.facebook.com" target="_blank"
+          ><i class="fab fa-facebook fab-icon"></i
+        ></a>
+        <a href="https://www.twitter.com" target="_blank"
+          ><i class="fab fa-twitter fab-icon"></i
+        ></a>
+        <a href="https://www.instagram.com" target="_blank"
+          ><i class="fab fa-instagram fab-icon"></i
+        ></a>
+        <a href="https://www.linkedin.com" target="_blank"
+          ><i class="fab fa-linkedin fab-icon"></i
+        ></a>
+        <a href="https://www.youtube.com" target="_blank"
+          ><i class="fab fa-youtube fab-icon"></i
+        ></a>
+      </div>
+    </div>
 
-    <!-- <footer></footer> -->
-    <!-- <div> -->
-      <!-- <div class="main-header">
-        <div class="main-header-list">
+    <!-- <menu-sec>-->
+    <div class="menu">
+      <div class="main-header-menu">
+        <div class="main-header-menu-contaier">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Project</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">home</a></li> 
+            <li class><a class="current" href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#project">Project</a></li>
+            <li><a href="#resume">Resume</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
+          <a href=""
+            ><img src="asset/images/icons/menu.png" alt="No image"
+          /></a>
         </div>
-        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook fab-icon"></i></a>
-        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter fab-icon"></i></a>
-        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram fab-icon"></i></a>
-        <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin fab-icon"></i></a>
-        <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube fab-icon"></i></a>
-
-        </div> 
-      <div class="copyright">
-              <p><a href="index.html">Sivabharath</a> &copy; 2023 All Right Reserved</p>
       </div>
-    </div>-->
+    </div>
+    <!-- menu sec end -->
+
+    <!-- welcome sec -->
+
+    <div class="wel-sec" id="home">
+      <h1>
+        Sivasp<span><br />Developer</span>
+      </h1>
+      <span><a href="index.html">Welcome</a></span>
+      <div></div>
+    </div>
+  </div>
+    <!-- Welcome sec end-->
+
+    <!--About sec -->
+    <div class="about-sec" id="about">
+      <div class="about-sec-head">
+        <h1>About Me</h1>
+      </div>
+      <div class="container paragraph">
+        <p class="para">
+          Sivabharath is a highly passionate and skilled web designer who excels
+          in creating visually stunning and user-friendly digital experiences.
+          With an unwavering commitment to simplicity, symmetry, and meticulous
+          attention to detail, his designs exude a perfect balance of beauty and
+          functionality. Whether he is working on books, branding, packaging, or
+          websites, Sivabharath consistently delivers top-notch results that
+          captivate users and leave a lasting impression. His diverse skill set
+          allows him to seamlessly transition between various design
+          disciplines, showcasing his adaptability and versatility in the
+          ever-evolving world of web design. With a user-centric approach,
+          Sivabharath places the needs and preferences of users at the
+          forefront, ensuring that his creations not only look striking but also
+          provide a seamless and delightful experience. Continuously seeking
+          inspiration and staying abreast of the latest design trends and
+          technologies, he remains at the cutting edge of his profession.
+        </p>
+        <div class="container-fluid see-work">
+          <p>Scroll down to see my work</p>
+          <div class="Scroll">▼</div>
+        </div>
+      </div>
+    </div>
+    <!--About sec -->
+
+    <!--project Section-->
+
+    <div class="Project-sec content-fluid" id="project">
+      <div class="project-sec-head">
+        <h1>Projects</h1>
+      </div>
+      <div class="container myproj">
+        <h1>ios</h1>
+        <img src="/asset/images/background/ios.png" />
+        <a href="github.com"
+          ><button class="btn btn-success">Source code</button></a
+        >
+        <h1>Aerospace</h1>
+        <img src="/asset/images/background/Aerospace.png" />
+        <a href="github.com"
+          ><button class="btn btn-success">Source code</button></a
+        >
+        <h1>Enclyclopedia</h1>
+        <img src="/asset/images/background/Encyclopedia.png" />
+        <a href="github.com"
+          ><button class="btn btn-success">Source code</button></a
+        >
+        <h1>CNC Machine</h1>
+        <img src="/asset/images/background/CNC.png" />
+        <a href="github.com"><button class="btn btn-success">Source code</button></a>
+      </div>
+    </div>
+
+     <!--project Section End-->
+
+     <!--Resume Sec-->
+     <div class="resume container container-fluid" id="resume">
+      <h3>Click Here To Download Resume</h3>
+      <button class="btn btn-primary" onclick="Download()">Download</button>
+     </div>
+
+     <!--Resume Sec end-->
+
+    <div class="Footer-sec" id="contact">
+      <div class="row">
+      <div class="foot-logo-desc col-lg-3">
+        <div class="foot-logo-desc">
+          <img src="asset/images/logo-main.png" height="100px" width="100px" alt="">
+          <div class=Footer-social-media>
+              <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook fab-icon"></i></a>
+              <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter fab-icon"></i></a>
+              <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram fab-icon"></i></a>
+              <a href="https://www.linkedin.com/in/sasi-aerospace-8594b017" target="_blank"><i class="fab fa-linkedin fab-icon"></i></a>
+              <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube fab-icon"></i></a>
+            </div>
+          </div>
+      </div>
+      <div class="Foot-implinks col-lg-3">
+            <ul>
+               <h3>Important Links</h6>
+                <li class><a class="current" href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#project">Project</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#contact">Contact</a></li>
+           </ul>
+      </div>
+      <div class="Foot-service col-lg-3">
+            <ul>
+              <h3>Services Offer</h6>
+              <li><a href="#">Web Design</a></li>
+              <li><a href="#">Static Page</a></li>
+              <li><a href="#">Frontend Development</a></li>
+           </ul>
+      </div>
+      <div class="contact-container col-lg-3">
+          <ul>
+          <h3>Contact info</h6>
+          <li><a href="mailto:sivabharath23@gmail.com"><i class="far fa-envelope icon-cep" style="color:#28A745"></i>  Sivabharath23@gmail.com</a></li>
+          <li><a href="tel:+919003793639"><i class="fas fa-phone icon-cep" style="color:#28A745"></i>  +91 9003793639</a></li>
+          <li><a href="https:/linkedin"><i class="fab fa-linkedin icon-cep" style="color:#28A745 !important"></i>  sivabharath23</a></i>
+          </a></li>
+          </ul>
+      </div> 
+    </div>
+      <div class="copy-right">
+        <hr>
+        <p>&copy; 2023 Sivabharath. All rights reserved.</p>
+      </div>
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="asset/js/script.js"></script>
   </body>
 </html>
