--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <a href="https://www.facebook.com" target="_blank"
           ><i class="fab fa-facebook fab-icon"></i
         ></a>
-        <a href="https://www.twitter.com" target="_blank"
+        <a href="https://twitter.com/sivabharath23" target="_blank"
           ><i class="fab fa-twitter fab-icon"></i
         ></a>
-        <a href="https://www.instagram.com" target="_blank"
+        <a href="https://www.instagram.com/sivabharath_23/" target="_blank"
           ><i class="fab fa-instagram fab-icon"></i
         ></a>
-        <a href="https://www.linkedin.com" target="_blank"
+        <a href="https://www.linkedin.com/in/sivabharath-991563218/" target="_blank"
           ><i class="fab fa-linkedin fab-icon"></i
         ></a>
         <a href="https://www.youtube.com" target="_blank"
@@ -49,15 +49,15 @@
     </div>
 
     <!-- <menu-sec>-->
-    <div class="menu">
+    <div class="menu" id="home">
       <div class="main-header-menu">
         <div class="main-header-menu-contaier">
           <ul>
-            <li class><a class="current" href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#project">Project</a></li>
-            <li><a href="#resume">Resume</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#home" onclick="Home()" id="H">Home</a></li>
+            <li><a href="#about" onclick="About()" id="A">About</a></li>
+            <li><a href="#project"onclick="Project()" id="P">Project</a></li>
+            <li><a href="#resume" onclick="Resume()" id="R">Resume</a></li>
+            <li><a href="#contact" onclick="Contact()" id="C">Contact</a></li>
           </ul>
           <a href=""
             ><img src="asset/images/icons/menu.png" alt="No image"
@@ -69,7 +69,7 @@
 
     <!-- welcome sec -->
 
-    <div class="wel-sec" id="home">
+    <div class="wel-sec">
       <h1>
         Sivasp<span><br />Developer</span>
       </h1>
@@ -119,22 +119,22 @@
       <div class="container myproj">
         <h1>ios</h1>
         <img src="/asset/images/background/ios.png" />
-        <a href="github.com"
+        <a href="https://github.com/sivabharath23/frontend-Project-ios" target="_blank"
           ><button class="btn btn-success">Source code</button></a
         >
         <h1>Aerospace</h1>
         <img src="/asset/images/background/Aerospace.png" />
-        <a href="github.com"
-          ><button class="btn btn-success">Source code</button></a
+        <a href="https://github.com/sivabharath23/Aerospace-Frontend"
+          target="_blank"><button class="btn btn-success">Source code</button></a
         >
         <h1>Enclyclopedia</h1>
         <img src="/asset/images/background/Encyclopedia.png" />
-        <a href="github.com"
-          ><button class="btn btn-success">Source code</button></a
+        <a href="https://github.com/sivabharath23/Encyclopedia-Clone-Frontend"
+        target="_blank"><button class="btn btn-success">Source code</button></a
         >
         <h1>CNC Machine</h1>
         <img src="/asset/images/background/CNC.png" />
-        <a href="github.com"><button class="btn btn-success">Source code</button></a>
+        <a href="https://github.com/sivabharath23/CNC-FrontEnd" target="_blank"><button class="btn btn-success">Source code</button></a>
       </div>
     </div>
 
@@ -155,9 +155,9 @@
           <img src="asset/images/logo-main.png" height="100px" width="100px" alt="">
           <div class=Footer-social-media>
               <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook fab-icon"></i></a>
-              <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter fab-icon"></i></a>
-              <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram fab-icon"></i></a>
-              <a href="https://www.linkedin.com/in/sasi-aerospace-8594b017" target="_blank"><i class="fab fa-linkedin fab-icon"></i></a>
+              <a href="https://twitter.com/sivabharath23" target="_blank"><i class="fab fa-twitter fab-icon"></i></a>
+              <a href="https://www.instagram.com/sivabharath_23/" target="_blank"><i class="fab fa-instagram fab-icon"></i></a>
+              <a href="https://www.linkedin.com/in/sivabharath-991563218/" target="_blank"><i class="fab fa-linkedin fab-icon"></i></a>
               <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube fab-icon"></i></a>
             </div>
           </div>
@@ -165,7 +165,7 @@
       <div class="Foot-implinks col-lg-3">
             <ul>
                <h3>Important Links</h6>
-                <li class><a class="current" href="#home">Home</a></li>
+                <li class><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#project">Project</a></li>
                 <li><a href="#resume">Resume</a></li>
